--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -10,29 +10,45 @@
 
 <body>
 
-{% include header.html %}
+    {% include header.html %}
 
-<section id="banner" class="style2">
-    <div class="inner">
-                <span class="image">
-                    <img src="{{ site.baseurl }}/{{ page.image }}" alt="">
-                </span>
-        <header class="major">
-
-            <h1>{{ page.title }}</h1>
-
-        </header>
-        <div class="content">
-
-            {{ page.description }}
-
+    <!-- Banner -->
+    <section id="banner" class="major">
+        <div class="inner">
+            <header class="major">
+                <h1>{{ page.landing-title }}</h1>
+            </header>
+            <div class="content">
+                <p style="text-transform: uppercase;">{{ site.description }}</p>
+                <ul class="actions">
+                    <li><a href="#one" class="button next scrolly">Get Started</a></li>
+                </ul>
+            </div>
         </div>
+    </section>
+
+    <!-- Main -->
+    <div id="main">
+
+        <!-- One -->
+        {% include tiles.html %}
+
+        <!-- Two -->
+        <section id="two">
+            <div class="inner">
+                <header class="major">
+                    <h2>Massa libero</h2>
+                </header>
+                <p>{{ content }}</p>
+                <ul class="actions">
+                    <li><a href="landing.html" class="button next">Get Started</a></li>
+                </ul>
+            </div>
+        </section>
+
     </div>
-</section>
 
-{{ content }}
-
-{% include footer.html %}
+    {% include footer.html %}
 
 </body>
 
