--- a/_includes/header.html
+++ b/_includes/header.html
@@ -10,7 +10,7 @@
 </header>
 
 <!-- Menu -->
-<nav id="menu">
+<!-- <nav id="menu">
 	<ul class="links">
         {% for page in site.pages %}
 		    {% if page.layout == "home" %}
@@ -24,3 +24,4 @@
 		{% endfor %}
 	</ul>
 </nav>
+-->
